# dailymotion

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  specs.md
dailymotion/: dependancies.py  main.py  settings.py
dailymotion/db/: __init__.py
dailymotion/endpoints/: users.py
dailymotion/models/: __init__.py  users.py
dailymotion/repositories/: __init__.py  users.py
dailymotion/scripts/: db.py  initdb.py
dailymotion/utils/: logger.py  smtp.py
tests/: conftest.py  mocks.py  test_dailymotion.py
tests/integration/: test_users.py
